Mon Aug 20 14:12:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.c:
   - Return from the HIDDumpTree() immediately, if nut_debug_level
     is too low. Otherwise, even if nothing will be printed, it
     will proceed to query everything from the report descriptor.
     This will take a long time on my Evolution 650, since the
     queries for 'UPS.COPIBridge' timeout, without ever yielding
     something useful.

Mon Aug 20 12:35:24 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 This update is based on input from Bernd Markgraf.

 * drivers/ietfmib.h:
   - Added 'test.battery.start.quick' and 'test.battery.start.deep'
     instcmd.
 * drivers/pwmib.h:
   - Added 'shutdown.stop', 'load.on' and 'load.off' instcmd.
   - Use PW_OID_BATT_STATUS, PW_OID_ALARM_OB and PW_OID_ALARM_LB
     instead of IETF_OID_BATT_STATUS.

Mon Aug 20 11:32:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch], drivers/usbhid-ups.c:
   - Pass events as pointers to HIDData_t elements, instead of strings.
     All HID paths that we handle will be cached by these, so we only
     have to deal with events that we don't know of yet (which won't
     happen that often) and which we can't use anyway (needs an entry
     in hid_info_t table).
   - Values which are received through the interrupt pipeline were
     passed as logical instead of physical data. Corrected by getting
     the values from HIDGetDataValue().
   - Fixed some typo's from earlier patches.

Mon Aug 20 08:14:38 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.[ch]:
   - Only parse the HID pathname to a HIDData_t pointer once, during
     HU_WALKMODE_INIT, instead of each time we read/write a value
     from/to the report buffer.

Mon Aug 20 07:48:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch]:
   - New functions HIDGetDataValue() and HIDSetDataValue() that are
     similar to the existing HIDGetItemValue() and HIDSetItemValue(),